--- a/loginMVC/Web.config
+++ b/loginMVC/Web.config
@@ -11,6 +11,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+    
+    <!--Cria a autentificacao -->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Conta/Login" name=".controlestoque"></forms>
+    </authentication>
+    
+    <!--Bloqueia todos que não estão autenticadados ou logados -->
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
